--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,13 @@ code {
     monospace;
 }
 
+.active{
+  padding-bottom: .15rem;
+  border-bottom: 2px solid #005cef;
+}
+
+.dark-active{
+  padding-bottom: .15rem;
+  border-bottom: 2px solid #8d6a9f;
+}
+
