Finalized Successful Email.js

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,53 @@ code {
   transition: .5s;
 }
 
+/* SCROLL DOWN */
+
+.scrolldown-wrapper {
+	left: 50%;
+	position: absolute;
+	text-align: center;
+	bottom: 0;
+	transform: translate(-50%, -50%);
+}
+  
+.scrolldown {
+  display: flex;
+  justify-content: center;
+	border: 2px solid #000000;
+	border-radius: 30px;
+	height: 46px;
+	margin: 0 auto 8px;
+	width: 30px;
+}
+
+.scrolldown-p1,
+.scrolldown-p2 {
+	animation-duration: 2s;
+	animation-name: scrolldown;
+	animation-iteration-count: infinite;
+	fill: #000000;
+}
+  
+.scrolldown-p2 {
+	animation-delay: 1s;
+}
+
+@keyframes scrolldown {
+	0% {
+		opacity: 0;
+		transform: translate(0, -8px);
+	}
+	50% {
+		opacity: 1;
+		transform: translate(0, 0);
+	}
+	100% {
+		opacity: 0;
+		transform: translate(0, 8px);
+	}
+}
+
 @media screen and (max-width: 767px) {
 #header{
   font-size: 17.5vw;
